Move Token Usuario to Auth

--- a/src/public/views/login.ejs
+++ b/src/public/views/login.ejs
@@ -19,7 +19,7 @@
                     <div class="form-goup m-2" id="idEmail">
                         <h6>Email <span class="label label-default"></span></h6>
                         <input type="text" name="email" id="email" placeholder="Insert your email" required
-                            class="form-control" value="" autocomplete="on">
+                            class="form-control" value="">
                     </div>
                     <!--password-->
                     <div class="form-goup m-2" id="idPassword">
