--- a/src/public/views/partials/_mostrar_editar.ejs
+++ b/src/public/views/partials/_mostrar_editar.ejs
@@ -1,10 +1,10 @@
 
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+<div class="modal fade" id="TaskModal" tabindex="-1" role="dialog" aria-labelledby="TaskModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Edit Task</h5>
+                <h5 class="modal-title" id="TaskModalLabel">Edit Task</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -68,7 +68,6 @@
                     <!--button-->
                     <div class="modal-footer">
                         <button type="submit" class="btn btn-success btn-block m-2">Save</button>
-                        <button type="button" class="btn btn-secondary btn-block m-2" id="cancelTask">Cancel</button>
                     </div>
                 </form>
             </div>
