--- a/src/public/views/register.ejs
+++ b/src/public/views/register.ejs
@@ -1,15 +1,11 @@
 <%- include('partials/_header'); %>
 
-
 <div class="modal fade" id="ModelRegister" tabindex="-1" role="dialog" aria-labelledby="ModelRegisterLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="ModelRegisterLabel">Register User</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
             </div>
             <div class="modal-body">
                 <form action="/register" method="POST" id="submitM" enctype="multipart/form-data">
@@ -35,7 +31,7 @@
                        <!--passwordrepeat-->
                        <div class="form-goup m-2" id="idPasswordRepeat">
                         <h6>Repeat Password <span class="label label-default"></span></h6>
-                        <input type="password" name="passwordrepeat" id="passwordrepeat" placeholder="Repeat password" required
+                        <input type="password" name="passwordrepeat" id="passwordrepeat" placeholder="Confirm password" required
                             class="form-control" value="">
                     </div>
                     <!--button-->
@@ -50,7 +46,7 @@
     </div>
 </div>
 <script>
-$('#ModelRegister').modal('toggle')
+$('#ModelRegister').modal({ backdrop: 'static', keyboard: false })
 
     
 </script>
