--- a/src/public/views/login.ejs
+++ b/src/public/views/login.ejs
@@ -27,8 +27,9 @@
                     </div>
                     <!--button-->
                     <div class="modal-footer">
+                        <a href="/authenticate" class="btn btn-info m-2 btn-block">Ingresar con Google</a>
                         <button type="submit" class="btn btn-success btn-block m-2">Login</button>
-
+                        
                         <a href="/register" class="btn btn-secondary btn-block m-2"  id="Register">Register</a>
                     </div>
                     
