--- a/src/public/views/list.ejs
+++ b/src/public/views/list.ejs
@@ -1,17 +1,17 @@
 <%- include('partials/_header'); %>
 <%- include('partials/_navBar'); %>
 
-   
-   
+
 <div class="container" id="ok">
   <div class="border  m-2 p-3 rounded">
-    <form >
+    <form>
 
       <div class="form-row">
         <div class="col-1">
-          <a data-toggle="tooltip" data-placement="top" title="Marcar lista como terminada " style="z-index:2;position:absolute;opacity:0;" href="/checkList/<%= list.id%>/listar">aa</a>
-         
-          <input  type="checkbox" <%= list.state ? checked="checked" : false  %>>
+          <a data-toggle="tooltip" data-placement="top" title="Marcar lista como terminada "
+            style="z-index:2;position:absolute;opacity:0;" href="/checkList/<%= list.id%>/listar">aa</a>
+
+          <input type="checkbox" <%= list.state ? checked="checked" : false  %>>
 
         </div>
         <div class="col">
@@ -22,16 +22,6 @@
           <label>Creation Date</label>
           <input type="text" disabled="disabled" class="form-control"
             value='<%=  list.creationDate.getFullYear()%>-<%= list.creationDate.getMonth()%>-<%=list.creationDate.getDate()%>'>
-        </div>
-
-        <div class="col ocultar" id="resolutionDate">
-          <label>Resolution Date</label>
-          <% if(list.resolutionDate) { %>
-          <input type="text" disabled="disabled" class="form-control"
-            value='<%= list.resolutionDate%>'>
-          <% } else { %>
-          <input type="text" disabled="disabled" class="form-control" value="">
-          <% } %>
         </div>
 
       </div>
@@ -48,11 +38,10 @@
           <th data-toggle="tooltip" data-placement="top" title="Ordenar por numero">NÂ°</th>
           <th data-toggle="tooltip" data-placement="top" title="Ordenar por titulo">Title</th>
           <th data-toggle="tooltip" data-placement="top" title="Ordenar por prioridad">Priority</th>
-          <th data-toggle="tooltip" data-placement="top" title="Ordenar por fecha de creacion">CreationDate
-                   
-          </th>
+          <th data-toggle="tooltip" data-placement="top" title="Ordenar por fecha de creacion">Creation Date</th>
+          <th data-toggle="tooltip" data-placement="top" title="Ordenar por fecha de resolución">Resolution Date</th>
           <th data-toggle="tooltip" data-placement="top" title="Ordenar por fecha de conclusion">Deafline</th>
-          <th >Action</th>
+          <th>Action</th>
         </tr>
       </thead>
       <tbody id="reloadTasks">
@@ -60,14 +49,21 @@
         <%for(var i=0; i < tasks.length; i++ ) { %>
         <%cont ++%>
         <tr class="<%= tasks[i].preority==0 ? 'table-success':tasks[i].preority==1 ?'table-warning':'table-danger'%>">
-          <td><a style="z-index:2;position:absolute;opacity:0;" href="/check/<%= tasks[i].id%>/<%= list.id %>" name='viene de list'>aa</a>
-            <input type="checkbox" <%= tasks[i].state ? checked="checked" : false %>></td>
+          <td>
+            <div style="display: none;"><%= tasks[i].state %></div>
+            <input class="form-check w-100 p-3" type="checkbox" onchange ="window.location.href='/check/<%= tasks[i].id %>/<%= list.id %>'" <%= tasks[i].state ? checked='checked' : false %> <%= tasks[i].state ? disabled='disabled' : false %> ></td>
           <td><%= i + 1  %></td>
           <td><%= tasks[i].title  %></td>
-          <td style="text-align: center;"> <label for="" style="opacity: 0; position: absolute;"> <%= tasks[i].preority==0 ? '0':tasks[i].preority==1 ?'1':'2'%> </label><%= tasks[i].preority==0 ? 'Baja':tasks[i].preority==1 ?'Media':'Alta'%>  </td>
+          <td style="text-align: center;"> <label for="" style="display: none;">
+              <%= tasks[i].preority==0 ? '0':tasks[i].preority==1 ?'1':'2'%>
+            </label><%= tasks[i].preority==0 ? 'Baja':tasks[i].preority==1 ?'Media':'Alta'%> </td>
           <td>
             <%= tasks[i].creationDate.getFullYear()%>-<%= tasks[i].creationDate.getMonth()%>-<%=tasks[i].creationDate.getDate()%>
           </td>
+          <td>
+            <%= tasks[i].resolutionDate%>
+          </td>
+
           <td> <% if(tasks[i].deafline != "") {%>
             <%= tasks[i].deafline%>
             <%}%>
@@ -83,15 +79,15 @@
             <a href="javascript:void(0);" class="fas fa-edit" onclick="mostrar_editar('<%= tasks[i].id%>')"></a>
             <% } %>
             <% } %>
-           
- 
+
+
       </tbody>
     </table>
 
   </div>
-  
 
-</table>
+
+  </table>
 
 </div>
 
@@ -99,9 +95,9 @@
 
   var id = "";
 
-  $(document).ready(function(){
-  $('[data-toggle="tooltip"]').tooltip();   
-});
+  $(document).ready(function () {
+    $('[data-toggle="tooltip"]').tooltip();
+  });
 
 
 
@@ -151,11 +147,10 @@
   };
 
 
-  $(document).ready(function() 
-    { 
-        $("#tabla").tablesorter(); 
-    } 
-);
+  $(document).ready(function () {
+    $("#tabla").tablesorter();
+  }
+  );
 
 
 </script>
